# docmind-ai

./: .gitignore  README.md  deploy.sh
.github/workflows/: test.yml
docmind-ai/: ecosystem.config.cjs  package-lock.json  package.json
docmind-ai-backend/: Dockerfile  pyproject.toml
docmind-ai-backend/app/: __init__.py  deps.py  exceptions.py  logger.py  main.py  models.py  settings.py
docmind-ai-backend/app/agents/: critic.py  graph.py  llm.py  retriever.py  specialists.py  state.py  supervisor.py  synthesizer.py  tools.py
docmind-ai-backend/app/app/lib/: supabase.py
docmind-ai-backend/app/ingest/: __init__.py  embedder.py  parser.py
docmind-ai-backend/app/lib/: supabase.py
docmind-ai-backend/app/routers/: chat.py  documents.py
docmind-ai/.lovable/: plan.md
docmind-ai/src/: routeTree.gen.ts  styles.css
docmind-ai/src/components/: AgentTimeline.tsx  DocumentSidebar.tsx  GroundingBadge.tsx  Sidebar.tsx  SourcesPanel.tsx
docmind-ai/src/hooks/: useAgentStream.ts  useConversations.ts  useConvoStore.ts
docmind-ai/src/integrations/supabase/: types.ts
docmind-ai/src/lib/: auth.tsx  error-capture.ts  error-page.tsx  services.ts  toast.tsx
docmind-ai/src/lib/services/: index.ts  mock.ts  types.ts
docmind-ai/src/routes/: __root.tsx  _authenticated.chat.tsx  _authenticated.documents.tsx  _authenticated.tsx  index.tsx  login.tsx
docmind-ai/supabase/: config.toml
docmind-ai/supabase/migrations/: 20260512104708_7c78c39e-3f89-4416-a41f-5e7ba1a32b7c.sql
